--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,18 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-dotenvy = { version = "*" }
-lazy_static = { version = "*" }
-poise = { version = "*" }
-rand = { version = "*" }
-reqwest = { version = "*", default_features = false, features = ["blocking", "json", "rustls-tls"] }
-serde = { version = "*", features = ["derive"] }
-serde_json = { version = "*" }
-serenity = { version = "*", default_features = false, features = ["builder", "client", "chrono", "collector", "gateway", "model", "rustls_backend", "utils", "voice",] }
-songbird = { version = "*", features = ["builtin-queue", "yt-dlp"] }
-sqlx = { version = "*", features = ["offline", "runtime-tokio-rustls", "sqlite"] }
-tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
-urlencoding = { version = "*" }
+dotenvy = { version = "0.15.7" }
+lazy_static = { version = "1.4.0" }
+poise = { version = "0.6.1" }
+rand = { version = "0.8.5" }
+reqwest = { version = "0.11.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
+serde = { version = "1.0.196", features = ["derive"] }
+serde_json = { version = "1.0.113" }
+serenity = { version = "0.12.0", default-features = false, features = ["builder", "client", "chrono", "collector", "gateway", "model", "rustls_backend", "utils", "voice",] }
+songbird = { version = "0.4.0", features = ["builtin-queue"] }
+sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite"] }
+tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
+urlencoding = { version = "2.1.3" }
 
 [profile.release]
 codegen-units = 1
