--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ serde = { version = "*", features = ["derive"] }
 serde_json = { version = "*" }
 serenity = { version = "*", default-features = false, features = ["builder", "client", "chrono", "collector", "gateway", "model", "rustls_backend", "utils", "voice",] }
 songbird = { version = "*", features = ["builtin-queue", "yt-dlp"] }
-sqlx = { version = "*", features = ["offline", "runtime-tokio-rustls", "sqlite"] }
+sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "sqlite"] }
 tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
 urlencoding = { version = "*" }
 
