--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,19 @@
+cargo-features = ["edition2024"]
+
 [package]
 name = "fabsebot_supremacy"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 dotenvy = { version = "0.15.7" }
 lazy_static = { version = "1.4.0" }
-poise = { version = "0.5.7" }
+poise = { version = "0.5.0" }
 rand = { version = "0.8.5" }
-reqwest = { version = "0.11.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
+reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1.0.0", features = ["derive"] }
 serde_json = { version = "1.0.0" }
-serenity = { version = "0.12.0", default-features = false, features = ["builder", "client", "chrono", "collector", "gateway", "model", "rustls_backend", "utils", "voice",] }
+serenity = { version = "0.12.0", default-features = false, features = ["builder", "chrono", "client", "collector", "gateway", "model", "rustls_backend", "utils", "voice",] }
 songbird = { version = "0.4.0", features = ["builtin-queue"] }
 sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "sqlite"] }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
@@ -19,5 +21,5 @@ urlencoding = { version = "2.1.0" }
 
 [profile.release]
 codegen-units = 1
-lto = "fat"
-strip = "symbols"
+lto = true
+strip = true
