--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,21 +4,22 @@ version = "0.2.0"
 edition = "2021"
 
 [dependencies]
-dotenvy = { version = "0.15.7" }
-lazy_static = { version = "1.4.0" }
-poise = { version = "0.6.0" }
-rand = { version = "0.8.5" }
-reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls"] }
-serde = { version = "1.0.0", features = ["derive"] }
-serde_json = { version = "1.0.0" }
-serenity = { version = "0.12.0", default-features = false, features = ["builder", "chrono", "client", "collector", "gateway", "model", "rustls_backend", "utils", "voice",] }
-songbird = { version = "0.4.0", features = ["builtin-queue"] }
-sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "sqlite"] }
-symphonia = { version = "0.5.2", features = ["aac", "mp3", "isomp4", "alac"] }
-tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
-urlencoding = { version = "2.1.0" }
+dotenvy = { version = "0" }
+lazy_static = { version = "1" }
+poise = { version = "0" }
+rand = { version = "0" }
+reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = { version = "1" }
+serenity = { version = "0", default-features = false, features = ["builder", "chrono", "client", "collector", "gateway", "model", "rustls_backend", "utils", "voice",] }
+songbird = { version = "0", features = ["builtin-queue"] }
+sqlx = { version = "0", features = ["runtime-tokio-rustls", "sqlite"] }
+symphonia = { version = "0", features = ["aac", "mp3", "isomp4", "alac"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+urlencoding = { version = "2" }
 
 [profile.release]
+panic = "abort"
 codegen-units = 1
-lto = true
+lto = "thin"
 strip = true
