--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,19 +4,19 @@ version = "0.2.0"
 edition = "2021"
 
 [dependencies]
-dotenvy = { version = "0" }
-lazy_static = { version = "1" }
-poise = { version = "0" }
-rand = { version = "0" }
-reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls"] }
+dotenvy = "0"
+lazy_static = "1"
+poise = "0"
+rand = "0"
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1", features = ["derive"] }
-serde_json = { version = "1" }
-serenity = { version = "0", default-features = false, features = ["builder", "chrono", "client", "collector", "gateway", "model", "rustls_backend", "utils", "voice",] }
+serde_json = "1"
+serenity = { version = "0", default-features = false, features = ["builder", "client", "gateway", "rustls_backend", "voice"] }
 songbird = { version = "0", features = ["builtin-queue"] }
-sqlx = { version = "0", features = ["runtime-tokio-rustls", "sqlite"] }
+sqlx = { version = "0", features = ["chrono", "mysql", "runtime-tokio", "tls-rustls"] }
 symphonia = { version = "0", features = ["aac", "mp3", "isomp4", "alac"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-urlencoding = { version = "2" }
+urlencoding = "2"
 
 [profile.release]
 panic = "abort"
