--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,15 @@ edition = "2021"
 
 [dependencies]
 dotenvy = "0"
-lazy_static = "1"
 poise = "0"
 rand = "0"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-serenity = { version = "0", default-features = false, features = ["builder", "client", "gateway", "rustls_backend", "voice"] }
+serenity = { version = "0", default-features = false, features = ["builder", "client", "gateway", "voice"] }
 songbird = { version = "0", features = ["builtin-queue"] }
-sqlx = { version = "0", features = ["chrono", "mysql", "runtime-tokio", "tls-rustls"] }
-symphonia = { version = "0", features = ["aac", "mp3", "isomp4", "alac"] }
+sqlx = { version = "0", features = ["mysql", "runtime-tokio"] }
+symphonia = { version = "0", features = ["aac", "mp3"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 urlencoding = "2"
 
