--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ rand = "0"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-serenity = { version = "0", default-features = false, features = ["client", "gateway", "model", "voice"] }
+serenity = { version = "0", default-features = false, features = ["cache", "client", "gateway", "model", "voice"] }
 songbird = { version = "0", features = ["builtin-queue"] }
 sqlx = { version = "0", features = ["mysql", "runtime-tokio"] }
 symphonia = { version = "0", features = ["aac", "mp3"] }
