--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,15 +5,15 @@ edition = "2021"
 
 [dependencies]
 dotenvy = "0"
-poise = "0"
+poise = "0" 
 rand = "0"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
-serde = { version = "1", features = ["derive"] }
+serde = { version = "1", features = ["serde_derive"] }
 serde_json = "1"
 serenity = { version = "0", default-features = false, features = ["cache", "client", "gateway", "model", "voice"] }
 songbird = { version = "0", features = ["builtin-queue"] }
-sqlx = { version = "0", features = ["mysql", "runtime-tokio"] }
-symphonia = { version = "0", features = ["aac", "mp3"] }
+sqlx = { version = "0", default-features = false, features = ["mysql", "runtime-tokio"] }
+symphonia = { version = "0", default-features = false, features = ["aac", "adpcm", "flac", "mkv", "mp3", "wav"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 urlencoding = "2"
 
