--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,13 @@ edition = "2021"
 [dependencies]
 base64 = "0"
 dotenvy = "0"
-poise = "0" 
+poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
 rand = "0"
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1", features = ["serde_derive"] }
 serde_json = "1"
-serenity = { version = "0", default-features = false, features = ["cache", "client", "gateway", "model", "voice"] }
-songbird = { version = "0", features = ["builtin-queue"] }
+serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = ["cache", "client", "gateway", "model", "rustls_backend", "voice"] }
+songbird = { git = "https://github.com/serenity-rs/songbird", branch = "serenity-next", features = ["builtin-queue"] }
 sqlx = { version = "0", default-features = false, features = ["mysql", "runtime-tokio"] }
 symphonia = { version = "0", default-features = false, features = ["aac", "adpcm", "flac", "mkv", "mp3", "wav"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
