--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,17 +6,18 @@ edition = "2021"
 [dependencies]
 ab_glyph = "0"
 dotenvy = "0"
-image = { version = "0", default-features = false, features = ["rayon", "avif", "webp"] }
+image = { version = "0", default-features = false, features = ["avif", "rayon", "webp"] }
 imageproc = "0"
 poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
 rand = "0"
+regex = "1"
 reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1", features = ["serde_derive"] }
 serde_json = "1"
 serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = ["cache", "client", "gateway", "model", "rustls_backend", "voice"] }
 songbird = { git = "https://github.com/serenity-rs/songbird", branch = "serenity-next", features = ["builtin-queue"] }
 sqlx = { version = "0", default-features = false, features = ["macros", "migrate", "mysql", "runtime-tokio"] }
-symphonia = { version = "0", default-features = false, features = ["aac", "adpcm", "flac", "mkv", "mp3", "wav"] }
+symphonia = { version = "0", default-features = false, features = ["adpcm", "flac", "mkv", "mp3", "opt-simd"] }
 textwrap = "0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 urlencoding = "2"
