--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ ab_glyph = "0"
 dotenvy = "0"
 image = { version = "0", default-features = false, features = ["avif", "rayon", "webp"] }
 imageproc = "0"
-nonmax = "0.5.5"
+lazy_static = "1"
 poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
 rand = "0"
 regex = "1"
