Fixed none-unwrap on deleted messages

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,6 @@ tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 urlencoding = "2"
 
 [profile.release]
+codegen-units = 1
 lto = "thin"
 strip = true
