--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2021"
 ab_glyph = "0"
 anyhow = "1"
 dotenvy = "0"
+fastrand = "2"
 image = { version = "0", default-features = false, features = ["avif", "rayon", "webp"] }
 imageproc = "0"
-lazy_static = "1"
+once_cell = "1"
 poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
-rand = "0"
 regex = "1"
 reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1", features = ["serde_derive"] }
@@ -22,9 +22,11 @@ sqlx = { version = "0", default-features = false, features = ["macros", "migrate
 symphonia = { version = "0", features = ["aac", "mp3", "isomp4", "opt-simd"] }
 textwrap = "0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+tracing = "0"
+tracing-subscriber = { version = "0" }
 urlencoding = "2"
 
 [profile.release]
 codegen-units = 1
-lto = "thin"
+lto = true
 strip = true
