--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ once_cell = "1"
 poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
 regex = "1"
 reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls"] }
+rustc-hash = { version = "2", features = ["nightly"] }
 serde = { version = "1", features = ["serde_derive"] }
 serde_json = "1"
 serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = ["cache", "gateway", "model", "rustls_backend", "voice"] }
