--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ fastrand = "2"
 image = { version = "0", default-features = false, features = ["avif", "rayon", "webp"] }
 imageproc = "0"
 once_cell = "1"
-poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
+poise = { git = "https://github.com/FabseGP/poise-fork", branch = "feat/user_apps", features = ["unstable"] }
 regex = "1"
 reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1", features = ["serde_derive"] }
