--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,15 @@ edition = "2021"
 ab_glyph = "0"
 anyhow = "1"
 dashmap = { version = "6", features = ["inline"] }
+#deadpool-postgres = "0"
 dotenvy = "0"
 fastrand = "2"
 image = { version = "0", default-features = false, features = ["avif", "rayon", "webp"] }
 imageproc = "0"
 once_cell = "1"
+opentelemetry = "0"
+opentelemetry-otlp = "0"
+opentelemetry_sdk = { version = "0", features = ["rt-tokio"] }
 poise = { git = "https://github.com/FabseGP/poise-fork", branch = "feat/user_apps", features = ["unstable"] }
 regex = "1"
 reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls"] }
@@ -19,18 +23,23 @@ serde = { version = "1", features = ["serde_derive"] }
 serde_json = "1"
 serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = ["cache", "gateway", "model", "rustls_backend", "voice"] }
 songbird = { git = "https://github.com/serenity-rs/songbird", branch = "serenity-next", features = ["builtin-queue"] }
-sqlx = { version = "0", default-features = false, features = ["macros", "migrate", "mysql", "runtime-tokio"] }
+sqlx = { version = "0", default-features = false, features = ["macros", "migrate", "postgres", "runtime-tokio"] }
 symphonia = { version = "0", features = ["aac", "mp3", "isomp4", "opt-simd"] }
 textwrap = "0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+#tokio-postgres = "0"
 tracing = "0"
+tracing-opentelemetry = "0"
 tracing-subscriber = { version = "0" }
 urlencoding = "2"
 
 [profile.release]
 codegen-units = 1
 lto = true
-strip = true
 
 [profile.dev]
+strip = true
+
+[profile.fabse]
+inherits = "release"
 strip = true
