WIP: testing global call

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ regex = "1"
 reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1", features = ["serde_derive"] }
 serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = ["cache", "gateway", "model", "rustls_backend", "voice"] }
-songbird = { git = "https://github.com/serenity-rs/songbird", branch = "serenity-next", features = ["builtin-queue"] }
+songbird = { git = "https://github.com/serenity-rs/songbird", branch = "serenity-next", features = ["builtin-queue", "receive"] }
 sqlx = { version = "0", default-features = false, features = ["macros", "migrate", "postgres", "runtime-tokio"] }
 symphonia = { version = "0", default-features = false, features = ["aac", "flac", "mkv", "opt-simd", "pcm"] }
 textwrap = "0"
