--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
 DISCORD_TOKEN=""
 DATABASE_URL=""
 DATABASE_MAX_CONNS=""
-CLOUDFLARE_TOKEN=""
-CLOUDFLARE_GATEWAY=""
-TENOR_TOKEN=""
+AI_TOKEN=""
 AI_SERVER=""
 TRANSLATE_SERVER=""
+IMAGE_DESC_SERVER=""
+IMAGE_GEN_SERVER=""
+SUMMARIZE_SERVER=""
+TEXT_GEN_SERVER=""
+TTS_SERVER=""
 GITHUB_TOKEN=""
 BOT_USERNAME=""
 BOT_AVATAR=""
