--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,6 @@ anyhow = "1"
 base64 = "0"
 bytes = "0"
 dashmap = { version = "6", features = ["inline"] }
-#deadpool-postgres = "0"
-dotenvy = "0"
 fastrand = "2"
 image = { version = "0", default-features = false, features = ["rayon", "webp"] }
 imageproc = { version = "0", default-features = false, features = ["rayon"] }
@@ -18,26 +16,28 @@ once_cell = "1"
 opentelemetry = "0" 
 opentelemetry-otlp = { version = "0", default-features = false, features = ["grpc-tonic", "trace"] }
 opentelemetry_sdk = { version = "0", default-features = false, features = ["rt-tokio"] }
-poise = { git = "https://github.com/FabseGP/poise-fork", branch = "feat/user_apps", features = ["unstable"] }
-regex = "1"
+poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
 reqwest = { version = "0", default-features = false, features = ["rustls-tls"] }
 serde = "1"
-serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = ["cache", "gateway", "model", "rustls_backend", "voice"] }
+serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = ["cache", "rustls_backend", "temp_cache", "voice"] }
 songbird = { git = "https://github.com/serenity-rs/songbird", branch = "serenity-next", features = ["builtin-queue", "receive"] }
-sqlx = { version = "0", default-features = false, features = ["macros", "migrate", "postgres", "runtime-tokio"] }
+sqlx = { git = "https://github.com/launchbadge/sqlx", branch = "main", default-features = false, features = ["macros", "postgres", "runtime-tokio"] }
 symphonia = { version = "0", default-features = false, features = ["flac", "mkv", "opt-simd-avx", "pcm", "wav"] }
 textwrap = "0"
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-#tokio-postgres = "0"
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
+toml = "0"
 tracing = "0"
 tracing-opentelemetry = { version = "0", default-features = false }
 tracing-subscriber = "0"
 urlencoding = "2"
+winnow = "0"
 
 [profile.release]
 codegen-units = 1
 lto = true
 strip = true
+panic = "abort"
 
 [profile.dev]
 strip = true
+
