--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ imageproc = { version = "0", default-features = false, features = ["rayon"] }
 once_cell = "1"
 opentelemetry = "0" 
 opentelemetry-otlp = { version = "0", default-features = false, features = ["grpc-tonic", "trace"] }
-opentelemetry_sdk = { version = "0", default-features = false, features = ["rt-tokio"] }
+opentelemetry_sdk = { version = "0", default-features = false, features = ["rt-tokio", "trace"] }
 poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
 reqwest = { version = "0", default-features = false, features = ["rustls-tls"] }
 serde = "1"
