--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ dashmap = { version = "6", features = ["inline"] }
 fastrand = "2"
 image = { version = "0", default-features = false, features = ["gif", "rayon", "webp"] }
 imageproc = { version = "0", default-features = false, features = ["rayon"] }
+mini-moka = { git = "https://github.com/moka-rs/mini-moka.git", branch = "v0.11.x" }
 once_cell = "1"
 opentelemetry = "0" 
 opentelemetry-otlp = { version = "0", default-features = false, features = ["grpc-tonic", "trace"] }
