--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ opentelemetry-otlp = { version = "0", default-features = false, features = ["grp
 opentelemetry_sdk = { version = "0", default-features = false, features = ["rt-tokio", "trace"] }
 poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
 reqwest = { version = "0", default-features = false, features = ["rustls-tls"] }
+scraper = "0"
 serde = "1"
 serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = ["cache", "rustls_backend", "temp_cache", "voice"] }
 songbird = { git = "https://github.com/serenity-rs/songbird", branch = "serenity-next", features = ["builtin-queue", "receive"] }
