utilize stored users for mentioned targets for ai-chat

--- a/config-example.toml
+++ b/config-example.toml
@@ -17,15 +17,14 @@
 
 [AI-Info]
 #token = ''
-#token_fallback = ''
-#fallback_provider = ''
-#text_model = ''
+#token_huggingface = ''
 #translate = 
 #image_desc = 
 #image_gen = 
 #summarize = 
 #text_gen = 
 #tts = 
+#universal = 
 
 [API-Info]
 #tenor_token = 
