--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ once_cell = "1"
 opentelemetry = "0" 
 opentelemetry-otlp = { version = "0", default-features = false, features = ["grpc-tonic", "trace"] }
 opentelemetry_sdk = { version = "0", default-features = false, features = ["rt-tokio", "trace"] }
-poise = { git = "https://github.com/jamesbt365/poise", branch = "fix-compile-serenity-next" }
+poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
 reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls"] }
 scraper = "0"
 serde = "1"
