--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ winnow = { version = "0", features = ["simd"] }
 
 [profile.release]
 codegen-units = 1
-lto = true
+lto = "thin"
 strip = true
 panic = "abort"
 
