--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,34 +5,33 @@ edition = "2024"
 
 [dependencies]
 ab_glyph = "*"
-anyhow = "1"
-base64 = "0"
-bytes = "1"
-dashmap = { version = "6", features = ["inline"] }
-fastrand = "2"
+anyhow = "*"
+base64 = "*"
+bytes = "*"
+dashmap = { version = "*", features = ["inline"] }
+fastrand = "*"
 image = { version = "0", default-features = false, features = ["gif", "rayon", "webp"] }
-imageproc = { version = "0", default-features = false, features = ["rayon"] }
+imageproc = { version = "*", default-features = false, features = ["rayon"] }
 mini-moka = { git = "https://github.com/moka-rs/mini-moka.git", branch = "v0.11.x" }
-once_cell = "1"
-opentelemetry = "0" 
-opentelemetry-otlp = { version = "0", default-features = false, features = ["grpc-tonic", "trace"] }
-opentelemetry_sdk = { version = "0", default-features = false, features = ["rt-tokio", "trace"] }
+opentelemetry = "*" 
+opentelemetry-otlp = { version = "*", default-features = false, features = ["grpc-tonic", "trace"] }
+opentelemetry_sdk = { version = "*", default-features = false, features = ["rt-tokio", "trace"] }
 poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
-reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls"] }
-scraper = "0"
-serde = "1"
+reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls"] }
+scraper = "*"
+serde = "*"
 serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = ["cache", "rustls_backend", "temp_cache", "voice"] }
 songbird = { git = "https://github.com/serenity-rs/songbird", branch = "serenity-next", features = ["builtin-queue", "receive"] }
 sqlx = { git = "https://github.com/launchbadge/sqlx", branch = "main", default-features = false, features = ["macros", "postgres", "runtime-tokio", "tls-rustls"] }
-symphonia = { version = "0", default-features = false, features = ["flac", "mkv", "opt-simd-avx", "pcm", "wav"] }
-textwrap = "0"
-tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
-toml = "0"
-tracing = "0"
-tracing-opentelemetry = { version = "0", default-features = false }
-tracing-subscriber = "0"
-urlencoding = "2"
-winnow = { version = "0", features = ["simd"] }
+symphonia = { version = "*", default-features = false, features = ["flac", "mkv", "opt-simd-avx", "pcm", "wav"] }
+textwrap = "*"
+tokio = { version = "*", features = ["rt-multi-thread", "signal"] }
+toml = "*"
+tracing = "*"
+tracing-opentelemetry = { version = "*", default-features = false }
+tracing-subscriber = "*"
+urlencoding = "*"
+winnow = { version = "*", features = ["simd"] }
 
 [profile.release]
 codegen-units = 1
