fix: add current channel to context of chatbot

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,14 @@ base64 = "*"
 bytes = "*"
 dashmap = { version = "*", features = ["inline"] }
 fastrand = "*"
-image = { version = "0", default-features = false, features = ["gif", "rayon", "webp"] }
+image = { version = "*", default-features = false, features = ["gif", "rayon", "webp"] }
 imageproc = { version = "*", default-features = false, features = ["rayon"] }
 mini-moka = { git = "https://github.com/moka-rs/mini-moka.git", branch = "v0.11.x" }
 opentelemetry = "*" 
 opentelemetry-otlp = { version = "*", default-features = false, features = ["grpc-tonic", "trace"] }
 opentelemetry_sdk = { version = "*", default-features = false, features = ["rt-tokio", "trace"] }
 poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
+rayon = "*"
 reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls"] }
 scraper = "*"
 serde = "*"
