--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,3 +44,39 @@ panic = "abort"
 [profile.dev]
 strip = true
 panic = "abort"
+
+[package.metadata.cargo-machete]
+ignored = [
+    "symphonia",    
+]
+
+[lints.clippy]
+all = "warn"
+nursery = "warn"
+pedantic = "warn"
+absolute_paths = "warn"
+allow_attributes = "warn"
+arithmetic_side_effects = "warn"
+as_conversions = "warn"
+error_impl_error = "warn"
+expect_used = "warn"
+field_scoped_visibility_modifiers = "warn"
+if_then_some_else_none = "warn"
+indexing_slicing = "warn"
+infinite_loop = "warn"
+large_include_file = "warn"
+mod_module_files = "warn"
+panic = "warn"
+panic_in_result_fn = "warn"
+print_stdout = "warn"
+redundant_type_annotations = "warn"
+return_and_then = "warn"
+str_to_string = "warn"
+string_to_string = "warn"
+unneeded_field_pattern = "warn"
+verbose_file_reads = "warn"
+use_debug = "warn"
+unwrap_used = "warn"
+unwrap_in_result = "warn"
+unused_trait_names = "warn"
+unused_result_ok = "warn"
