--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+cargo-features = ["codegen-backend"]
+
 [package]
 name = "fabsebot"
 version = "0.6.0"
@@ -51,6 +53,7 @@ dashmap = "*"
 fastrand = "*"
 image = { version = "*", default-features = false, features = ["gif", "rayon", "webp"] }
 imageproc = { version = "*", default-features = false, features = ["rayon"] }
+metrics = { version = "*" }
 mini-moka = { git = "https://github.com/moka-rs/mini-moka.git", branch = "v0.11.x" }
 poise = { git = "https://github.com/FabseGP/poise-fork", branch = "components-v2" }
 rayon = "*"
@@ -76,14 +79,12 @@ fabsebot_commands = { path = "fabsebot_commands" }
 fabsebot_core = { path = "fabsebot_core" }
 fabsebot_db = { path = "fabsebot_db" }
 anyhow = { workspace = true }
-opentelemetry = "*" 
-opentelemetry-otlp = { version = "*", default-features = false, features = ["grpc-tonic", "trace"] }
-opentelemetry_sdk = { version = "*", default-features = false, features = ["rt-tokio", "trace"] }
+metrics-exporter-prometheus = { version = "*", default-features = false, features = ["http-listener"] }
 serde = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
+tokio-metrics = { version = "*" }
 toml = "*"
 tracing = { workspace = true }
-tracing-opentelemetry = { version = "*", default-features = false }
 tracing-subscriber = "*"
 
 [profile.release]
@@ -95,6 +96,7 @@ panic = "abort"
 [profile.dev]
 debug = "line-tables-only"
 panic = "abort"
+#codegen-backend = "cranelift"
 
 [package.metadata.cargo-machete]
 ignored = [
