--- a/fabsebot_commands/Cargo.toml
+++ b/fabsebot_commands/Cargo.toml
@@ -14,6 +14,7 @@ base64 = { workspace = true }
 bytes = { workspace = true }
 dashmap = { workspace = true }
 image = { workspace = true, default-features = false, features = ["gif", "rayon", "webp"] }
+metrics = { workspace = true }
 poise = { workspace = true }
 rayon = { workspace = true }
 serde = { workspace = true }
