feat: split larger functions + provide buttons for control for music playback + use separate voice_manager with decode-support for voice packets

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,7 @@ textwrap = "*"
 tokio = { version = "*", features = ["rt-multi-thread", "signal"] }
 tracing = "*"
 urlencoding = "*"
+uuid = "*"
 winnow = { version = "*", features = ["simd"] }
 
 [lints]
