--- a/fabsebot_db/Cargo.toml
+++ b/fabsebot_db/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 workspace = true
 
 [dependencies]
+anyhow = { workspace = true }
 serde = { workspace = true }
 sqlx = { workspace = true, default-features = false, features = ["macros", "postgres", "runtime-tokio"] }
-tracing = { workspace = true }
 
