--- a/fabsebot_commands/Cargo.toml
+++ b/fabsebot_commands/Cargo.toml
@@ -14,6 +14,7 @@ base64 = { workspace = true }
 bytes = { workspace = true }
 dashmap = { workspace = true }
 image = { workspace = true, default-features = false, features = ["gif", "rayon", "webp"] }
+indexmap = { workspace = true }
 metrics = { workspace = true }
 poise = { workspace = true }
 rayon = { workspace = true }
@@ -24,5 +25,4 @@ sqlx = { workspace = true, default-features = false, features = ["macros", "post
 systemstat = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 tracing = { workspace = true }
-uuid = { workspace = true }
 urlencoding = { workspace = true }
