--- a/fabsebot_core/Cargo.toml
+++ b/fabsebot_core/Cargo.toml
@@ -13,6 +13,7 @@ bytes = { workspace = true }
 fastrand = { workspace = true }
 image = { workspace = true, default-features = false, features = ["gif", "rayon", "webp"] }
 imageproc = { workspace = true, default-features = false, features = ["rayon"] }
+indexmap = { workspace = true }
 metrics = { workspace = true }
 mini-moka = { workspace = true }
 poise = { workspace = true }
