fix: keep locks for duration of ai-chatbot command

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -102,5 +102,6 @@ panic = "abort"
 
 [package.metadata.cargo-machete]
 ignored = [
-    "symphonia",    
+    "symphonia",
+    "tokio-metrics"  
 ]
