--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,14 +56,15 @@ imageproc = { version = "*", default-features = false, features = ["rayon"] }
 indexmap = "*"
 metrics = { version = "*" }
 mini-moka = { git = "https://github.com/moka-rs/mini-moka.git", branch = "v0.11.x" }
-poise = { git = "https://github.com/FabseGP/poise-fork", branch = "components-v2" }
+#poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
+poise = { git = "https://github.com/FabseGP/poise-fork.git", branch = "components-v2" }
 rayon = "*"
 reqwest = { version = "*", default-features = false, features = ["rustls-tls"] }
 scraper = "*"
 serde = "*"
-serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = ["cache", "rustls_backend", "transport_compression_zstd"] }
-songbird = { git = "https://github.com/serenity-rs/songbird", branch = "serenity-next", features = ["builtin-queue", "receive"] }
-sqlx = { git = "https://github.com/launchbadge/sqlx", branch = "main", default-features = false, features = ["macros", "postgres", "runtime-tokio"] }
+serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next", default-features = false, features = ["cache", "rustls_backend", "transport_compression_zstd"] }
+songbird = { git = "https://github.com/serenity-rs/songbird.git", branch = "serenity-next", features = ["builtin-queue", "receive"] }
+sqlx = { git = "https://github.com/launchbadge/sqlx.git", branch = "main", default-features = false, features = ["macros", "postgres", "runtime-tokio"] }
 symphonia = { version = "*", default-features = false, features = ["flac", "mkv", "opt-simd-avx", "pcm", "wav"] }
 systemstat = "*"
 textwrap = "*"
