feat: updated deps + WIP impls for db-calls

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,10 @@
 [target.x86_64-unknown-linux-gnu]
 linker = "clang"
-rustflags = ["-Ctarget-cpu=native", "-Clink-arg=-fuse-ld=wild"]
+rustflags = ["-Ctarget-cpu=native", "-Clink-arg=--ld-path=wild"]
+
+[target.aarch64-unknown-linux-gnu]
+linker = "clang"
+rustflags = ["-Ctarget-cpu=native", "-Clink-arg=--ld-path=wild"]
 
 [build]
 rustc-wrapper = "sccache"
