--- a/fabsebot_commands/Cargo.toml
+++ b/fabsebot_commands/Cargo.toml
@@ -8,6 +8,7 @@ workspace = true
 
 [dependencies]
 fabsebot_core = { path = "../fabsebot_core" }
+fabsebot_db = { path = "../fabsebot_db" }
 ab_glyph = { workspace = true }
 anyhow = { workspace = true }
 base64 = { workspace = true }
