--- a/fabsebot_core/Cargo.toml
+++ b/fabsebot_core/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 workspace = true
 
 [dependencies]
+fabsebot_db = { path = "../fabsebot_db" }
 ab_glyph = { workspace = true }
 anyhow = { workspace = true }
 bytes = { workspace = true }
@@ -23,7 +24,7 @@ serde = { workspace = true }
 serenity = { workspace = true, default-features = false, features = ["cache", "rustls_backend", "transport_compression_zstd"] }
 songbird = { workspace = true, features = ["builtin-queue", "receive"] }
 sqlx = { workspace = true, default-features = false, features = ["macros", "postgres", "runtime-tokio"] }
-symphonia = { workspace = true, default-features = false, features = ["flac", "mkv", "opt-simd-avx", "pcm", "wav"] }
+symphonia = { workspace = true }
 systemstat = { workspace = true }
 textwrap = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
@@ -34,3 +35,7 @@ winnow = { workspace = true, features = ["simd"] }
 
 [package.metadata.cargo-machete]
 ignored = ["symphonia"]
+
+[features]
+simd-avx = ["symphonia/opt-simd-avx"]
+simd-neon = ["symphonia/opt-simd-neon"]
