--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -12,5 +12,5 @@ rustflags = ["-Z", "threads=8"]
 
 [unstable]
 gc = true
-build-std = ["std", "panic_abort", "core"]
-build-std-features = ["panic_immediate_abort"]
+build-std = ["std", "panic_abort"]
+#build-std-features = ["panic_immediate_abort"]
