--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ error_impl_error = "warn"
 expect_used = "warn"
 field_scoped_visibility_modifiers = "warn"
 if_then_some_else_none = "warn"
+implicit_clone = "warn"
 indexing_slicing = "warn"
 infinite_loop = "warn"
 large_include_file = "warn"
@@ -35,7 +36,6 @@ print_stdout = "warn"
 redundant_type_annotations = "warn"
 return_and_then = "warn"
 str_to_string = "warn"
-string_to_string = "warn"
 unneeded_field_pattern = "warn"
 verbose_file_reads = "warn"
 use_debug = "warn"
