--- a/fabsebot_commands/Cargo.toml
+++ b/fabsebot_commands/Cargo.toml
@@ -13,6 +13,7 @@ ab_glyph = { workspace = true }
 anyhow = { workspace = true }
 base64 = { workspace = true }
 dashmap = { workspace = true }
+fastrand = { workspace = true }
 image = { workspace = true, default-features = false, features = ["gif", "rayon", "webp"] }
 poise = { workspace = true }
 rayon = { workspace = true }
