--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,12 +55,12 @@ bytes = "*"
 dashmap = "*"
 fastrand = "*"
 image = { version = "*", default-features = false, features = ["gif", "rayon", "webp"] }
-imageproc = { version = "*", default-features = false, features = ["rayon"] }
+imageproc = { version = "*", default-features = false, features = ["rayon", "text"] }
 indexmap = "*"
 metrics = { version = "*" }
 mini-moka = { git = "https://github.com/moka-rs/mini-moka.git", branch = "v0.11.x" }
-#poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
-poise = { git = "https://github.com/mkrasnitski/poise", branch = "argument-convert" }
+poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
+#poise = { git = "https://github.com/mkrasnitski/poise", branch = "argument-convert" }
 rayon = "*"
 reqwest = { version = "*", default-features = false, features = ["rustls-tls"] }
 scraper = "*"
